[package]
name = "argon2cli"
version = "1.0.0"
description = "A cli app in Rust for calculate Argon2 hash"
authors = ["Fabrice Corraire <antidote1911@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Antidote1911/argon2cli"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive","cargo"] }
argon2 = "0.4.0"
hex = "0.4.3"
log = "0.4.0"
env_logger = "0.8.4"
color-eyre = "0.6.1"

[[bin]]
name = "argon2cli"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
